# Rust-SQL-API

./: .env  Cargo.toml  DATABASE.sql  README.md
migrations/2022-03-14-131431_create_users/: down.sql  up.sql
migrations/2022-03-14-173738_create_users/: up.sql
migrations/2022-03-14-173750_create_phones/: down.sql  up.sql
migrations/2022-03-14-173753_create_schedules/: down.sql  up.sql
src/: handler.rs  main.rs  models.rs  schema.rs
src/models/: mod.rs  schema.rs
