[package]
name = "api-mysql"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
diesel = { version = "1.0.0", features = ["mysql"]}
diesel_codegen = { version = "0.16.0", features = ["mysql"] }
dotenv = "0.15.0"
rprompt = "1.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.0"
serde_json = "1.0.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]